<resources>
    <string name="app_name">Task manager</string>
    <string name="goToCompletedBT">Go to finished tasks</string>
    <string name="goToUncompletedBT">Go to active tasks</string>
    <string name="addTaskBT">Add task</string>
    <string name="notesTV">Notes: </string>
    <string name="notesET">Type notes here</string>
    <string name="deadlineTV">Deadline: </string>
    <string name="deadlineET">Choose date here</string>
    <string name="taskTV">Task: </string>
    <string name="taskET">Type task here</string>
    <string name="saveBT">Save</string>
    <string name="returnBT">Cansel</string>
    <string name="deleteBT">delete</string>
    <string name="categoryET">Enter your category here</string>
    <string name="categoryTX">Category</string>
    <string name="allCategory">All</string>
</resources>